source/externs/X11/extensions/XIproto.d


struct deviceKeyButtonPointer {
    BYTE type;
    BYTE detail;
    CARD16 sequenceNumber;
    Time time;
    Window root;
    Window event;
    Window child;
    INT16 root_x;
    INT16 root_y;
    INT16 event_x;
    INT16 event_y;
    KeyButMask state;
    BOOL same_screen;
    CARD8 deviceid;
    }

/**********************************************************
 *
 * DeviceFocus.
 *
 */

struct deviceFocus {
    BYTE type;
    BYTE detail;
    CARD16 sequenceNumber;
    Time time;
    Window window;
    BYTE mode;
    CARD8 deviceid;
    BYTE pad1, pad2;
    CARD32 pad00;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    }

/**********************************************************
 *
 * DeviceStateNotify.
 *
 * Note that the two high-order bits in the classes_reported
 * field are the proximity state (InProximity or OutOfProximity),
 * and the device mode (Absolute or Relative), respectively.
 *
 */

struct deviceStateNotify {
    BYTE type;
    BYTE deviceid;
    CARD16 sequenceNumber;
    Time time;
    CARD8 num_keys;
    CARD8 num_buttons;
    CARD8 num_valuators;
    CARD8 classes_reported;
    CARD8[4] buttons;
    CARD8[4] keys;
    INT32 valuator0;
    INT32 valuator1;
    INT32 valuator2;
    }

/**********************************************************
 *
 * DeviceKeyStateNotify.
 *
 */

struct deviceKeyStateNotify {
    BYTE type;
    BYTE deviceid;
    CARD16 sequenceNumber;
    CARD8[28] keys;
    }

/**********************************************************
 *
 * DeviceButtonStateNotify.
 *
 */

struct deviceButtonStateNotify {
    BYTE type;
    BYTE deviceid;
    CARD16 sequenceNumber;
    CARD8[28] buttons;
    }

/**********************************************************
 *
 * DeviceMappingNotify.
 * Fields must be kept in sync with core mappingnotify event.
 *
 */

struct deviceMappingNotify {
    BYTE type;
    BYTE deviceid;
    CARD16 sequenceNumber;
    CARD8 request;
    KeyCode firstKeyCode;
    CARD8 count;
    BYTE pad1;
    Time time;
    CARD32 pad00;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    }

/**********************************************************
 *
 * ChangeDeviceNotify.
 *
 */

struct changeDeviceNotify {
    BYTE type;
    BYTE deviceid;
    CARD16 sequenceNumber;
    Time time;
    CARD8 request;
    BYTE pad1, pad2, pad3;
    CARD32 pad00;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    }

/**********************************************************
 *
 * devicePresenceNotify.
 *
 */

struct devicePresenceNotify {
    BYTE type;
    BYTE pad00;
    CARD16 sequenceNumber;
    Time time;
    BYTE devchange; /* Device{Added|Removed|Enabled|Disabled|ControlChanged} */
    BYTE deviceid;
    CARD16 control;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
    CARD32 pad06;
    }


/*********************************************************
 * DevicePropertyNotifyEvent
 *
 * Sent whenever a device's property changes.
 *
 */

struct devicePropertyNotify {
    BYTE type;
    BYTE state;               /* NewValue or Deleted */
    CARD16 sequenceNumber;
    CARD32 time;
    Atom atom;                /* affected property */
    CARD32 pad0;
    CARD32 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD16 pad5;
    CARD8 pad4;
    CARD8 deviceid;            /* id of device */
    }


